style.css
 body {
    background-color: #f2f2f2;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.volume-icon {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

.container {
  text-align: center;
}

.image-container {
  border-radius: 50%;
  border: 5px solid #fff;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 310px;
  height: 310px;
}

.image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: transform 0.1s;
  transform: scale(1.05);
}

.image-container.clicked .image {
  transform: scale(1);
}

.paragraph {
  text-align: center;
  margin-top: 20px;
  margin-bottom: 5px;
  width: 310px;
  height: 150px;
  overflow-y: scroll;
  word-wrap: break-word;
  font-size: 16px;
}

.text-entry {
  margin-top: 10px;
  font-size: 14px;
}

.enter-button {
  margin-top: 5px;
  font-size: 14px;
  font-weight: bold;
  width: 100%;
  background-color: #ec7d0f;
  border: 0px;
}

.enter-button:hover {
  background-color: #ed510e;
}

.enter-button:active:focus {
  background-color: #ef110c !important;
  outline: none !important;
  box-shadow: none !important;
  border: none !important;
}

